# discord-alerts-kit

./: .gitignore  README.md  example_bot.py  pyproject.toml  setup.py
discord_alerts_kit/: __init__.py  alerts.py  commands.py  config.py  embed.py  storage.py
discord_alerts_kit/sources/: __init__.py  epic.py  steam.py
